mouseoverした時に効果音を出すようにした

--- a/public/index.html
+++ b/public/index.html
@@ -92,8 +92,11 @@
       <audio id="finish" preload="auto">
         <source src="/sound/finish.mp3" type="audio/mp3">
       </audio>
+      <audio id="cancel" preload="auto" volume="1">
+        <source src="/sound/cancel.mp3" type="audio/mp3">
+      </audio>
     </div>
     <!-- javascript-->
-    <script src="js/script.js?v=1"></script>
+    <script src="js/script.js?v=2"></script>
   </body>
 </html>
